# sqlite-wit

./: .gitignore  Cargo.toml  MIGRATION-1.0.md  README.md
src/: lib.rs
wit/: dotcmd.wit  guest.wit  host-spi.wit  loader-bridge.wit  policy.wit  types.wit  world.wit
wit/sqlite-extension/: world.wit
