[package]
name = "sqlite-extension-policy"
version = "0.1.0"
edition = "2021"
description = "Canonical Rust types for the sqlite:extension/policy WIT contract — capability allow-list, HTTP allowlist with wildcard suffixes, fuel/memory/epoch knobs, error variants. Used by both sqlink-loader (native) and sqlink-host (in-WASM) so a single Policy value ports between deployment modes."
license = "MIT"
repository = "https://github.com/tegmentum/sqlite-wit"
readme = "README.md"

[lib]
name = "sqlite_extension_policy"
path = "src/lib.rs"

[dependencies]
# The canonical, db-agnostic policy types now live in the shared datalink
# crate (sqlink + ducklink both consume them). This crate re-exports them so
# every existing `sqlite_extension_policy::{...}` call site is unchanged.
# datalink is PUBLIC.
datalink-policy = { git = "https://github.com/tegmentum/datalink.git" }
